--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -5,16 +5,10 @@ name: Using a sample of a manual workflow
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
 on:
+  push:
+    branches:    
+      - 'main'    
   workflow_dispatch:
-    # Inputs the workflow accepts.
-    inputs:
-      username:
-        # Friendly description to be shown in the UI instead of 'name'
-        description: 'Person to greet'
-        # Default value if no value is explicitly provided
-        default: 'World'
-        # Input has to be provided for the workflow to run
-        required: true
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -27,4 +21,4 @@ jobs:
     steps:
     # Runs a single command using the runners shell
     - name: Send greeting
-      run: echo "Hello ${{ github.event.inputs.username }}"
+      run: echo "Hello Cuyahoga"
