--- a/.github/workflows/multiple-jobs.yml
+++ b/.github/workflows/multiple-jobs.yml
@@ -19,4 +19,4 @@ jobs:
     runs-on: ubuntu-latest
     needs: job1
     steps:
-      - run: echo ${{job1.outputs.output1}} ${{job1.outputs.output2}}
+      - run: echo ${{needs.job1.outputs.output1}} ${{needs.job1.outputs.output2}}
